--- a/Product landing page/styles.css
+++ b/Product landing page/styles.css
@@ -1,20 +1,14 @@
 *{
-  color: white;
+  color: #777777;
 }
 
 body{
   margin: 0;
- background: linear-gradient(
-   to left, 
- black 50%,
- linen)
-}
+  background-color: black;
+ }
 
 header{
-  background: linear-gradient(
-    to left, 
-    linen, 
-    white 50%);
+  background: white;
   display: flex;
   justify-content: space-evenly;
   top: 0;
@@ -22,8 +16,8 @@ header{
 }
 #header-img{
   border: 2px solid red;
-  width: 10%;
   height: auto;
+  margin-left: auto;
   margin-right:auto;
   border-radius: 60px;
 }
@@ -41,7 +35,7 @@ header{
   align-items: center;
   font-size: 25px;
   position: sticky;
-}
+} 
 /*test*/
 .nav-link {
   color: brown;
@@ -92,44 +86,68 @@ header{
 /*test end*/
 li{
   list-style: none;
-  display: inline-flex;
 }
 
-#shop{
+
+
+#hero{
+  background-image: url("https://img.freepik.com/free-photo/elegant-white-abstract-background_24972-1974.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   border: 5px dotted orange;
-  margin: 10px;
-  width: 100vw;
+  min-height: 100svh;
+  margin: 0;
+  width: 98vw;
   height: 40vw;
   padding: 0;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
 .box1{
-  border: 1px dotted red;
+  background-color: rgba(7,7,7,0.1);
+  padding: 60px;
+  width: 30vw;
+  font-family: verdana, sans-serif;
+}
+
+.box1,#limited{
+  color: gold;
+
+  
+}
+.box1,#fomo{
+  color: red;
+  font-style: italic;
 }
 
 
-/*
+
+
 iframe{
-  width: 49vw;
-  height: 40vw;
-  border-radius: 8px;
- 
-}*/
+  border: 5px outset gold;
+  border-radius: 10px; 
+}
 
 
 #sale{
   border: 1px solid green;
+  min-height: 700px;
   margin: 10px;
-  width: 100vw;
-  height: 40vw;
+  display: flex;
+  justify-content: center;  
+  align-items: center;
+ 
 }
 
 #gallery{
   border: 1px solid red;
+  min-height: 700px;
   margin: 10px;
-  width: 100vw;
-  height: 40vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 
 }
 
@@ -137,10 +155,10 @@ iframe{
 #newsletter{
   border: 1px solid blue;
   display: flex;
-  justify-content: center;
+  min-height: 700px;
   margin: 10px;
-  width: 100vw;
-  height: 20vw;
+  align-items: center;
+ 
 }
 
 footer{
