--- a/Product landing page/styles.css
+++ b/Product landing page/styles.css
@@ -4,27 +4,27 @@
 
 body{
   margin: 0;
-  background-color: black;
  }
 
 header{
-  background: white;
+  background: linear-gradient(
+    to right,
+    white,
+    linen);
+  height: 10vh;
   display: flex;
   justify-content: space-evenly;
   top: 0;
   position: sticky;
 }
 #header-img{
-  border: 2px solid red;
   height: auto;
-  margin-left: auto;
-  margin-right:auto;
+  margin-right: auto;
   border-radius: 60px;
 }
 
 
 #nav-bar ul{
-  border: 2px solid red;
   width: 40vw;
   height: 100%;
   margin-top: 0;
@@ -90,14 +90,13 @@ li{
 
 
 
-#hero{
+#home{
   background-image: url("https://img.freepik.com/free-photo/elegant-white-abstract-background_24972-1974.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  border: 5px dotted orange;
   min-height: 100svh;
   margin: 0;
-  width: 98vw;
+  width: auto;
   height: 40vw;
   padding: 0;
   display: flex;
@@ -105,22 +104,90 @@ li{
   align-items: center;
 }
 .box1{
-  background-color: rgba(7,7,7,0.1);
   padding: 60px;
   width: 30vw;
+}
+.ctahead{
+  font-family: impact;
+  font-size: 40px;
+  letter-spacing: 3px;
+  opacity: 0.7;
+  text-shadow: 3px, 3px, black;
+
+}
+.ctabody{
   font-family: verdana, sans-serif;
 }
 
-.box1,#limited{
+#off{
+  color: red;
+}
+
+#limited{
   color: gold;
+  text-shadow: 1px 1px black;
 
   
 }
-.box1,#fomo{
+#fomo{
   color: red;
   font-style: italic;
 }
+#div-cta{
+  top: 10px;
+  width: auto;
+  height: 60px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 
+#cta{
+  appearance: none;
+  background-color: #FFFFFF;
+  border-radius: 40em;
+  border-style: none;
+  box-shadow: silver 0 -12px 6px inset;
+  box-sizing: border-box;
+  color: #000000;
+  cursor: pointer;
+  display: inline-block;
+  font-family: verdana,sans-serif;
+  font-size: 1.2rem;
+  font-weight: 20;
+  letter-spacing: -.24px;
+  margin: -80px;
+  outline: none;
+  padding: 1rem 1.3rem;
+  quotes: auto;
+  text-align: center;
+  text-decoration: none;
+  transition: all .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+#cta:hover {
+  background-color: #FFC229;
+  box-shadow: #FF6314 0 -6px 8px inset;
+  transform: scale(1.125);
+}
+
+#cta:active {
+  transform: scale(1.025);
+}
+
+@media (min-width: 768px) {
+  #cta {
+    font-size: 1.5rem;
+    padding: .75rem 2rem;
+  }
+}
+
+.ctaimage{
+ height: 2rem; 
+}
 
 
 
@@ -130,7 +197,7 @@ iframe{
 }
 
 
-#sale{
+#testimonials{
   border: 1px solid green;
   min-height: 700px;
   margin: 10px;
@@ -140,7 +207,7 @@ iframe{
  
 }
 
-#gallery{
+#locations{
   border: 1px solid red;
   min-height: 700px;
   margin: 10px;
@@ -154,12 +221,24 @@ iframe{
 
 #newsletter{
   border: 1px solid blue;
-  display: flex;
-  min-height: 700px;
+  display: block;
+  min-height: 400px;
   margin: 10px;
+  padding-top: 90px;
   align-items: center;
- 
 }
+
+#newsletter #text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#newsletter #form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 footer{
   border: 1px solid green;
