--- a/Product landing page/styles.css
+++ b/Product landing page/styles.css
@@ -1,7 +1,9 @@
 *{
   color: #777777;
 }
-
+html{
+  scroll-behavior: smooth;
+}
 body{
   margin: 0;
  }
@@ -87,8 +89,6 @@ header{
 li{
   list-style: none;
 }
-
-
 
 #home{
   background-image: url("https://img.freepik.com/free-photo/elegant-white-abstract-background_24972-1974.jpg");
