--- a/survey form/styles.css
+++ b/survey form/styles.css
@@ -1,27 +1,123 @@
+html{
+    scroll-behavior: smooth;
+}
+
 body{
    background-image: url(https://static.vecteezy.com/system/resources/thumbnails/020/069/751/small_2x/business-performance-monitoring-concept-businessman-using-smartphone-online-survey-filling-out-digital-form-checklist-blue-background-photo.jpg);
    color: white;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
+   font-family: Sans-serif, verdana;
+   
+   
   }
 
 header{
-    margin-left: auto;
-    margin-right: auto;
-    
+    display: block;
+    text-align: center;
+    font-size: 1.4rem;
+}
+#name-label{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+#email-label{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+#number-label{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+#dropdown{
+    width: 25%;
+    height: 2rem;
+    border-radius: 5px;
+}
+option{
+    font-size: 1rem;
 }
 
 .container{
-
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
+    width: 60%;
 
 }
 form{
-    
-    background-color: rgba(8, 8, 87,0.5);
-    
-    border: 5px solid white;
+    box-sizing: border-box;
+    background-color: rgba(8, 8, 87,0.9);
+    border: 3px solid white;
+    padding: 5%;
+    border-radius: 5px;  
 }
+
+input{
+    width: -webkit-fill-available;
+    height: 2rem;
+    border-radius: 5px;
+
+}
+input:radio{
+    width: 25%;
+}
+
+
+.inline {
+    width: unset;
+    margin: 0 0.5em 0 0;
+    vertical-align: middle;
+    font-size: 3rem;
+}
+fieldset{
+    border: 1px solid transparent;
+    padding: 0;
+    margin: 10px 0 0 0;  
+}
+
+.checkbox{
+    position: relative;
+    width: 1rem;
+    display: grid;
+
+}
+label{
+    display: flex;
+    align-items: center;   
+}
+
+legend{
+    font-size: 1.5em;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.input-textarea{
+    display: flex;
+    min-height: 10px;
+    width: 50%;
+    padding: 0.75rem;
+    resize: vertical;
+}
+
+button{
+    display: block;
+    width: 100%;
+    padding: 0.75rem;
+    background: green;
+    color: inherit;
+    border-radius: 2px;
+    cursor: pointer;
+    margin-top: 2rem;
+}
+h1{
+    font-family: verdana, sans-serif;
+}
+
