--- a/survey form/styles.css
+++ b/survey form/styles.css
@@ -9,40 +9,11 @@ body{
    background-repeat: no-repeat;
    background-attachment: fixed;
    font-family: Sans-serif, verdana;
-   
-   
   }
 
 header{
     display: block;
     text-align: center;
-    font-size: 1.4rem;
-}
-#name-label{
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-#email-label{
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-#number-label{
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-#dropdown{
-    width: 25%;
-    height: 2rem;
-    border-radius: 5px;
-}
-option{
-    font-size: 1rem;
 }
 
 .container{
@@ -56,68 +27,31 @@ form{
     background-color: rgba(8, 8, 87,0.9);
     border: 3px solid white;
     padding: 5%;
-    border-radius: 5px;  
-}
+    border-radius: 5px;
 
+   
+}
 input{
     width: -webkit-fill-available;
     height: 2rem;
     border-radius: 5px;
 
 }
-input:radio{
-    width: 25%;
-}
-
-
-.inline {
-    width: unset;
-    margin: 0 0.5em 0 0;
-    vertical-align: middle;
-    font-size: 3rem;
-}
-fieldset{
-    border: 1px solid transparent;
-    padding: 0;
-    margin: 10px 0 0 0;  
-}
-
-.checkbox{
-    position: relative;
-    width: 1rem;
-    display: grid;
+radio{
 
 }
+
 label{
-    display: flex;
-    align-items: center;   
-}
+    font-weight: 600;
+    
 
-legend{
-    font-size: 1.5em;
-    margin-top: 20px;
-    margin-bottom: 10px;
 }
+    
 
-.input-textarea{
-    display: flex;
-    min-height: 10px;
-    width: 50%;
-    padding: 0.75rem;
-    resize: vertical;
-}
-
-button{
-    display: block;
-    width: 100%;
-    padding: 0.75rem;
-    background: green;
-    color: inherit;
-    border-radius: 2px;
-    cursor: pointer;
-    margin-top: 2rem;
-}
 h1{
     font-family: verdana, sans-serif;
 }
 
+p{
+    font-weight: 600;
+}
