--- a/tributepage/styles.css
+++ b/tributepage/styles.css
@@ -3,14 +3,15 @@ body{
   color: antiquewhite
 }
 
-
+main{
+  margin: 150px;
+}
 
 
 h1{
   display: flex;
   justify-content: right;
   font-family: impact, san-serif;
-  margin-left: 3rem;
 
 }
 
@@ -18,10 +19,12 @@ img{
   display: block;
   border: 0;
   border-radius: 10px;
+  min-width: 300px;
   }
 
 #image{
   max-width: 100%;
+ 
   height: auto;
   margin-left: auto;
   margin-right: auto; 
@@ -39,8 +42,9 @@ img{
 }
 
 .container{
-  display: grid;
-  grid-template-columns: 20% auto 20%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 
 }
 .column{
