--- a/Technical documentation/styles.css
+++ b/Technical documentation/styles.css
@@ -46,8 +46,8 @@ body{
 a:hover{
   background-color: antiquewhite;
   color: white;
-  padding: 5px 15px;
-  font-size: 18px;
+  padding: 5px 5px;
+  font-size: 1rem;
   width: 100%;
   height: 100%;
 }
@@ -74,6 +74,25 @@ code{
   word-break: normal;
   word-wrap: normal;
 }
+
+@media only screen and (max-width: 1024px) {
+  #navbar {
+      min-height: auto; 
+      height: 100%; 
+      position: fixed;
+      overflow-y: auto; 
+  }
+  
+  #navbar ul {
+      max-height: 80vh; 
+      overflow-y: auto;
+  }
+
+  #main-doc {
+      margin-left: 250px; 
+  }
+}
+
 
 
 @media only screen and (max-width: 815px) {
